iptables_rules.txt
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.94.0/24 -i eth1 -p icmp -j ACCEPT
-A INPUT -s 192.168.94.0/24 -i eth1 -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.94.0/24 -i eth1 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.94.0/24 -i eth1 -p udp -m state --state NEW -m udp --dport 67 -j ACCEPT
-A INPUT -s 192.168.94.0/24 -i eth1 -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j DROP
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 110 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 993 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 995 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 143 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 587 -j ACCEPT
-A FORWARD -s 192.168.94.0/24 -i eth1 -p tcp -m tcp --dport 465 -j ACCEPT
-A FORWARD -d 192.168.94.0/24 -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DROP
-A OUTPUT -j ACCEPT
COMMIT
